<resources>
    <string name="app_name">Khanzo Play</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_daily_task">Daily Task</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_coupons">Coupons</string>
    <string name="title_music">Music</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_profile">Profile</string>
    <string name="title_my_level">My Level</string>
    <string name="title_earning">Earning</string>
    <string name="title_language">Language</string>
    <string name="title_about">About App</string>
    <string name="title_report">Report</string>
    <string name="title_activity_child_mode">ChildModeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Checkout activity -->
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is
        not available on this phone.
    </string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for
        %s!
    </string>
</resources>